git使用说明md笔记,添加部分

--- a/8-16 Git.md
+++ b/8-16 Git.md
@@ -349,9 +349,17 @@ $ git commit --amend
 
 当我们运行上面命令时,会出现 vim 编辑窗口,刚进入编辑器的时候,是 vim 的 normal 模式,按键盘`i a o`都可以进入 Vim 的 insert 模式进行编辑(**编辑必须在 insert 模式中进行**)
 
+git 中 vim 的常用几个命令,按 Esc 退出插入模式后,输入`:`,
+
+- `:w` 保存编辑后文件内容,不退出 vim 编辑器
+- `:wq` 保存并退出 vim
+- `:q` 退出 vim
+
 - ps.terminal 中切换到 d 盘 `cd /d`or `cd d:`,MinGW(Minimalist GNUfor Windows)
 - vsCode 中使用 git bash, VScode 首选项 User Settings 中设置
 
 ```json
 "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe"
 ```
+
+执行`git commit --amend`,在 vim 中编辑完 message 后,`:wq`退出,我们`git status`查看,会发现只有一次提交记录,上一次的会被 overwrite 重写
