添加撤销操作git reset

--- a/8-16 Git.md
+++ b/8-16 Git.md
@@ -339,7 +339,7 @@ $ git log --stat
 $ git log --pretty=oneline
 ```
 
-## 3.1 Undoing Things
+#### Undoing Things
 
 当我们在一次提交`git commit -m <msg>`完后发现提交信息写错了,或者有漏掉文件没有`git add`,可以运行撤销操作:
 
@@ -363,3 +363,28 @@ git 中 vim 的常用几个命令,按 Esc 退出插入模式后,输入`:`,
 ```
 
 执行`git commit --amend`,在 vim 中编辑完 message 后,`:wq`退出,我们`git status`查看,会发现只有一次提交记录,上一次的会被 overwrite 重写
+
+```git
+$ git commit -m 'initial commit'
+$ git add forgotten_file
+$ git commit --amend
+// 两次提交最后log中只有一条
+// 前一条被覆盖,我们在这儿修改了提交的message
+```
+
+You end up with a single commit — the second commit replaces the results of the first.
+
+#### Unstaging a Staged File
+
+当我们运行`git add .`or`git add *`暂存了两个(所有的)修改文件,但是我们原本想要将它们作为两次独立的修改提交,
+那么取消暂存中的一个使用`git reset HEAD <file>`来取消暂存的某个文件
+
+#### Unmodifying a Modified File
+
+```git
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+    modified:   CONTRIBUTING.md
+```
