add remote repository command

--- a/8-16 Git.md
+++ b/8-16 Git.md
@@ -377,7 +377,7 @@ You end up with a single commit — the second commit replaces the results o
 #### Unstaging a Staged File
 
 当我们运行`git add .`or`git add *`暂存了两个(所有的)修改文件,但是我们原本想要将它们作为两次独立的修改提交,
-那么取消暂存中的一个使用`git reset HEAD <file>`来取消暂存的某个文件
+那么取消暂存中的一个使用`git reset HEAD '<file>'`来取消暂存的某个文件
 
 #### Unmodifying a Modified File
 
@@ -388,3 +388,11 @@ Changes not staged for commit:
 
     modified:   CONTRIBUTING.md
 ```
+
+如果我们不想保留对某个文件的修改(文件未放入暂存区),想要将它还原成上次提交时的样子(或者刚把它放入工作区的样子)
+
+- `git checkout --'<filename>'` 注意加上文件后缀名`.md or .js`等
+
+执行完后,我们可以看见后来做出的修改被原来提交的版本替换了,注意:我们在`git commit`后所做的所有修改的都会消失
+
+如果我们仍向保留对那个文件做出的修改,但现在又需要撤销,我们可以新建一个`branch`分支来保存进度.
