add reset to specified commit

--- a/8-16 Git.md
+++ b/8-16 Git.md
@@ -389,10 +389,21 @@ Changes not staged for commit:
     modified:   CONTRIBUTING.md
 ```
 
-如果我们不想保留对某个文件的修改(文件未放入暂存区),想要将它还原成上次提交时的样子(或者刚把它放入工作区的样子)
+如果我们不想保留对某个文件的修改(**文件未放入暂存区才可以使用**),想要将它还原成上次提交时的样子(或者刚把它放入工作区的样子)
 
 - `git checkout --'<filename>'` 注意加上文件后缀名`.md or .js`等
 
 执行完后,我们可以看见后来做出的修改被原来提交的版本替换了,注意:我们在`git commit`后所做的所有修改的都会消失
 
 如果我们仍向保留对那个文件做出的修改,但现在又需要撤销,我们可以新建一个`branch`分支来保存进度.
+
+**Git 回滚到某个 commit**
+注意使用--hard 不可逆
+
+```
+$ git reset --hard HEAD^         回退到上个版本
+$ git reset --hard HEAD~3        回退到前3次提交之前，以此类推，回退到n次提交之前
+$ git reset --hard commit_id     退到/进到 指定commit的sha码
+```
+
+> ps. `git commit -a -m`===`git commit -am`
